[gd_scene load_steps=10 format=2]

[ext_resource path="res://View/template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Model/Labels/NewAccHeader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Montserrat_theme.tres" type="Theme" id=4]
[ext_resource path="res://Montserrat_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://Model/Labels/Cancel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Model/Labels/CreateAccount.tscn" type="PackedScene" id=7]
[ext_resource path="res://Control/randy_scripts/NewAccount.gd" type="Script" id=8]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=9]

[node name="NewAccountScreen" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="MarginContainer" parent="TextureRect" index="0"]
anchor_top = 1.93836e-10
margin_right = -46.0
margin_bottom = -62.0
rect_scale = Vector2( 0.85, 0.85 )

[node name="ColorRect" parent="TextureRect/MarginContainer" index="0"]
margin_right = 1645.0
margin_bottom = 1066.0

[node name="MarginContainer" parent="TextureRect/MarginContainer" index="1"]
margin_right = 1645.0
margin_bottom = 1066.0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer" index="0"]
margin_right = 1295.0
margin_bottom = 896.0
custom_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 1245.0
margin_bottom = 720.0
custom_constants/vseparation = 50
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="0"]
margin_right = 380.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Email Address: "
align = 2

[node name="EmailRow" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="1"]
margin_left = 390.0
margin_right = 1125.0
margin_bottom = 60.0

[node name="EmailText" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer/EmailRow" index="0"]
margin_right = 375.0
margin_bottom = 60.0
rect_min_size = Vector2( 375, 0 )
custom_fonts/font = ExtResource( 5 )

[node name="EmailBack" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer/EmailRow" index="1"]
margin_left = 379.0
margin_right = 735.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "@e.ntu.edu.sg"
align = 2

[node name="Label2" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="2"]
margin_top = 110.0
margin_right = 380.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Password: "
align = 2

[node name="PasswordText" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="3"]
margin_left = 390.0
margin_top = 110.0
margin_right = 1125.0
margin_bottom = 170.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 5 )

[node name="Label3" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="4"]
margin_top = 220.0
margin_right = 380.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "Nickname:"
align = 2

[node name="NicknameText" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="5"]
margin_left = 390.0
margin_top = 220.0
margin_right = 1125.0
margin_bottom = 280.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 5 )

[node name="Label7" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="6"]
margin_top = 330.0
margin_right = 380.0
margin_bottom = 390.0
custom_fonts/font = ExtResource( 2 )
text = "For Teachers: "
align = 2

[node name="TeachersText" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="7"]
margin_left = 390.0
margin_top = 330.0
margin_right = 1125.0
margin_bottom = 390.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 5 )

[node name="Label4" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="8"]
margin_top = 440.0
margin_right = 380.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "School: "
align = 2

[node name="SchoolSelect" type="OptionButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="9"]
margin_left = 390.0
margin_top = 440.0
margin_right = 1125.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )

[node name="Label5" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="10"]
margin_top = 550.0
margin_right = 380.0
margin_bottom = 610.0
custom_fonts/font = ExtResource( 2 )
text = "Class:  "
align = 2

[node name="ClassSelect" type="OptionButton" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="11"]
margin_left = 390.0
margin_top = 550.0
margin_right = 1125.0
margin_bottom = 610.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )

[node name="FullnameLabel" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="12"]
margin_top = 660.0
margin_right = 380.0
margin_bottom = 720.0
custom_fonts/font = ExtResource( 2 )
text = "Full Name:"
align = 2

[node name="FullnameEdit" type="LineEdit" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer" index="13"]
margin_left = 390.0
margin_top = 660.0
margin_right = 1125.0
margin_bottom = 720.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 5 )
placeholder_text = "Jane Doe"

[node name="ErrorMessage" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="1"]
visible = false
margin_top = 630.0
margin_right = 896.0
margin_bottom = 728.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.647059, 0.109804, 0.109804, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Error Message"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer" index="2"]
margin_top = 756.0
margin_right = 1245.0
margin_bottom = 846.0
size_flags_vertical = 10
custom_constants/separation = 50
alignment = 1

[node name="Button" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 7 )]
margin_left = 237.0
margin_top = 0.0
margin_right = 597.0
margin_bottom = 90.0

[node name="Button2" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 6 )]
margin_left = 647.0
margin_top = 0.0
margin_right = 1007.0
margin_bottom = 90.0

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

[node name="Header" parent="." index="4" instance=ExtResource( 3 )]
margin_top = 20.0
[connection signal="item_selected" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/GridContainer/SchoolSelect" to="." method="_on_OptionButton3_item_selected"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
